# Revo

./: .gitignore  README.md  index.html  main.js  newtab.html  next.config.ts  package-lock.json  package.json  renderer.js  styles.css  vite.config.ts
Tasks/: Readme.md
native/: CMakeLists.txt
native/include/: video_engine.h
native/src/: audio_mixer.cpp  compositor.cpp  effects_pipeline.cpp  encoder.cpp  timeline_engine.cpp  video_decoder.cpp
src/: App.css  App.tsx  fabric.d.ts  ffmpeg.d.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  project.rs  timeline.rs
src/app/: globals.css
src/app/api/render/: route.ts
src/app/api/render/[id]/: route.ts
src/app/api/uploads/local/: route.ts
src/app/api/uploads/presign/: route.ts
src/app/api/uploads/url/: route.ts
src/components/: EffectsPanel.tsx  ExportDialog.tsx  LayerPanel.tsx  Preview.tsx  Timeline.tsx  Toolbar.tsx  VideoCanvas.tsx  modal-upload.tsx
src/components/Canvas/: VideoCanvas.css  VideoCanvas.tsx
src/components/Controls/: PlaybackControls.css  PlaybackControls.tsx
src/components/Sidebar/: LayerPanel.css  LayerPanel.tsx  PropertyPanel.css  PropertyPanel.tsx
src/components/Timeline/: Playhead.css  Playhead.tsx  Timeline.css  Timeline.tsx  TimelineClip.tsx  TimelineRuler.css  TimelineRuler.tsx  TimelineTrack.tsx
src/components/Toolbar/: Toolbar.css  Toolbar.tsx
src/components/shared/: logos.tsx
src/features/editor/: editor.tsx  navbar.tsx
src/features/editor/store/: use-download-state.ts
src/features/editor/timeline/items/: video.ts
src/hooks/: useKeyboardShortcuts.ts
src/lib/: tauri.ts
src/store/: canvasStore.ts  editorStore.ts  timelineStore.ts  useEditorStore.ts  videoStore.ts
src/styles/: index.css  theme.css  variables.css
src/types/: index.ts
src/utils/: ffmpeg.ts  upload-service.ts  videoUtils.ts
