[package]
name = "revo"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[lib]
name = "revo_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "revo"
path = "src/main.rs"
